# apma_1941b_final

./: .gitignore  Cargo.toml  README.md  github_schema.graphql  query_repo_dependencies.graphql  query_repo_names.graphql
figs_dot/: avg.dot  basic.dot  binary.dot  count.dot  example_graph.dot  geometric_mean.dot  min.dot
graphql/: query_repo_dependencies.graphql  query_repo_id.graphql  query_user_id.graphql  query_user_logins.graphql
migrations/00000000000001_create_users/: up.sql
migrations/00000000000002_create_repos/: up.sql
migrations/00000000000004_create_user_logins/: down.sql  up.sql
migrations/00000000000006_create_dependencies/: down.sql
migrations/00000000000007_create_user_index/: up.sql
migrations/00000000000008_create_repo_index/: up.sql
migrations/00000000000009_create_contributions_index/: down.sql  up.sql
migrations/00000000000010_create_user_logins_index/: down.sql  up.sql
migrations/00000000000011_create_repo_names_index/: down.sql  up.sql
migrations/2021-04-04-190544_create_users/: up.sql
migrations/2021-04-04-190632_create_repos/: up.sql
migrations/2021-04-04-190655_create_contributions/: up.sql
migrations/2021-04-04-190823_create_dependencies/: up.sql
migrations/2021-04-07-194320_create_repo_names/: down.sql  up.sql
paper/: dists.txt  main_file.tex  paper.bib
queries/: contributions.sql  repo_names.sql  repos.sql  user_logins.sql  users.sql
scripts/: components_hist.py  degree_figs.py  dist.py  figs.py  graphs.sh  main_figs.py  plot_contribution_dist.py  temp.py
src/: add_db_items.rs  component_sizes_csv.rs  components.rs  configuration_model.rs  connection_str_stats.rs  connection_strength.rs  contribution_dist_csv.rs  csv_items.rs  csv_items_iter.rs  dataset.rs  degree_dist_csv.rs  distances.rs  edge_vec.rs  github_api.rs  github_types.rs  lib.rs  loaded_dataset.rs  null_random_graph_model.rs  output_data.rs  progress_bar.rs  projected_graph.rs  save_subgraph.rs  traversal.rs
(+18 files in other folders)
