[package]
name = "github_net"
version = "0.1.0"
authors = ["rgreenblatt <greenblattryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres"] }
diesel_migrations = "1.4"
dotenv = "0.15"
itertools = "0.10"
graphql_client = "0.9"
serde = "1.0"
serde_json = "1.0"
csv = "1.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
git-url-parse = "0.3"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
structopt = "0.3"
indicatif = "0.15"
num_cpus = "1.13"
