[package]
name = "github_net"
version = "0.1.0"
authors = ["rgreenblatt <greenblattryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
lto = "thin"

[dependencies]
dotenv = "0.15"
itertools = "0.10"
graphql_client = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
git-url-parse = "0.3"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
structopt = "0.3"
indicatif = { version = "0.15", features = ["rayon"] }
base64 = "0.13"
unzip-n = "0.1"
dot = "0.1"
fnv = "1.0"
ordered-float = "2.1"
rand = "0.8"
rayon = "1.5"

[dev-dependencies]
proptest = "0.10"
